# LatticeGuard

./: .env.example  .gitignore  .latticeguard.yaml.example  README.md  ROADMAP.md  SECURITY.md  action.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pqc-scan.yml
agents/: file_analyst.py  graph.py  remediation.py
backend/: Dockerfile  ai_client.py  main.py
backend/tests/: test_main.py
cli/: cicd_scanner.py  main.py  org_scanner.py  test_typer.py
docs/: FEATURE_LIST.md
frontend/: Dockerfile  package-lock.json  package.json
planner/: agent.py  fingerprint.py
reporting/: pdf_generator.py
risk/: advisory.py  assessor.py  blast_radius.py  compliance.py  migration_estimator.py  perf_simulator.py
sample_repos/banking-v-legacy/: LegacyBankingSystem.java  README.md  payment_gateway.cpp
sample_repos/cloud-native-shipping/: go.mod  ingress.yaml
sample_repos/duitnow-qr-merchant/: QRPaymentService.java  README.md
sample_repos/fintech-python-misuse/: crypto_utils.py
sample_repos/hsm-token-vault/: token_vault.cpp
sample_repos/hybrid-secure-java/: QuantumSecureVault.java
scanner/: ast_scanner.py  binary_audit.py  cloud_discovery.py  cloudformation.py  db.py  dependencies.py  doc_scanner.py  easm.py  files.py  git_scanner.py  go_ast_scanner.py  history.py  js_scanner.py  kubernetes.py  network.py  patterns.py  planner.py  runtime_ebpf.py  secret_scanner.py  suppression.py  terraform_json_scanner.py  treesitter_scanner.py
schemas/: cbom.py  models.py
scripts/: test_features.sh
tests/: generate_large_test.py  test_ai_client.py  test_scanners.py  test_security.py
tests/samples/: go.mod  (+7 more)
tools/: debug_agent.py  report_gen.py
worker/: Dockerfile  worker.py
(+26 files in other folders)
