[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lattice-guard"
version = "0.1.0"
description = "Post-Quantum Cryptography Assessment Tool"
authors = [
    {name = "Waqas", email = "waqas@example.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "redis",
    "pydantic",
    "requests",
    "httpx",
    "typer",
    "rich",
    "google-genai",
    "python-dotenv",
    # Phase 4: Tree-sitter for Java/C++ AST
    "tree-sitter>=0.21.0",
    "tree-sitter-java>=0.21.0",
    "tree-sitter-cpp>=0.22.0",
    # Phase 4: K8s manifest parsing
    "pyyaml>=6.0",
    # Phase 4: PDF reports
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scanner*", "risk*", "agents*", "schemas*", "backend*", "worker*"]
